fix code block overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,10 +60,16 @@
 
 .chroma {
   @apply relative;
+
+  & code {
+    display: block;
+    overflow-x: auto;
+    max-width: calc(100vw - (theme(padding.4) * 2));
+  }
 }
 
 .copy-code-button {
-  @apply absolute right-3 top-[0.625rem];
+  @apply absolute right-[0.8rem] top-[0.7rem];
 }
 .copy-code-button--copied {
   @apply text-ctp-green;
